--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,16 +1,16 @@
 ---
 layout: default
 ---
-<article>
+<article id="text-all">
     <div class="post-header">
         <h1>
-            <a href="{% include relative %}/tags/#{{ page.tags[0] | downcase }}">#{{ page.tags[0] }}</a> 
+            <a href="{% include relative %}/index.html" style="font-size: 70%;color: #808080;" class="link">Back</a>
             {{ page.title | escape }}
         </h1>
         <p class="post-info">
-                <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%b %-d, %Y" }}</time>
+            <time datetime='{{ page.date | date: "%Y/%m/%d-%a" }}'>{{ page.date | date: "%Y/%m/%d-%a" }}</time>
             {% for tag in page.tags %}
-             | <a href="{% include relative %}/tags/#{{ tag | downcase }}">#{{ tag }}</a>
+            | <a href="{% include relative %}/tags/#{{ tag | downcase }}">#{{ tag }}</a>
             {% endfor %}
         </p>
     </div>
