--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<html>
 {% include head.html %}
 <body>
-    <header>
-        <a class="site-title" href="{% include relative %}" >{{ site.title }}</a>
-        <div style="display: inline-block">
-            {% for my_page in site.pages %}{% if my_page.title and my_page.noindex != true %}
-             | <a href="{% include relative %}{{ my_page.url | relative_url }}">{{ my_page.title }}</a>
-            {% endif %}{% endfor %}
-        </div>
-        
-    </header>
-    <hr>
-    <main>
     <div class="content-wrapper">
-    {{ content }}
+        <header>
+            <a class="site-title" href="{% include relative %}" style="font-size: 125%;">{{ site.title }}</a>
+            <div style="display: inline-block">
+                {% for my_page in site.pages %}{% if my_page.title and my_page.noindex != true %}
+                | <a href="{% include relative %}{{ my_page.url | relative_url }}">{{ my_page.title }}</a>
+                {% endif %}{% endfor %}
+            </div>
+        </header>
+        <hr>
+        <main>
+        {{ content }}
+        </main>
+        <hr>
+        <footer>
+            <p style="text-align: center;">
+                {% capture footer-md %}{% include footer.md %}{% endcapture %}{{ footer-md | markdownify }}
+            </p>
+        </footer>
     </div>
-    </main>
-    <hr>
-    <footer>
-        {% capture footer-md %}{% include footer.md %}{% endcapture %}{{ footer-md | markdownify }}
-    </footer>
 </body>
 </html>
