--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,5 +22,8 @@
             </p>
         </footer>
     </div>
+    <link rel="stylesheet" href="https://unpkg.com/@highlightjs/cdn-assets@11.6.0/styles/default.min.css">
+    <script src="https://unpkg.com/@highlightjs/cdn-assets@11.6.0/highlight.min.js"></script>
+    <script>hljs.highlightAll();</script>
 </body>
 </html>
