--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -106,3 +106,11 @@ a:hover {
     text-decoration-line: underline;
 }
 
+.up{
+    float: right;
+    position: fixed;
+    height: 100px;
+    width: 100px;
+    top: 65%;
+    right:5px;
+}
