--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,15 +1,26 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        body {
-            background: url("{{ site.background-url }}");
-        }
-    </style>
+    <link rel="icon" href="https://zichenstudio.github.io/blog/favicon.ico">
+    <script>
+    window.onload = function() {
+        let xhr = new XMLHttpRequest();
+        let bgUrl = "{{ site.background-url }}";
+        xhr.open('GET', bgUrl, true);
+        xhr.responseType = 'blob';
+        xhr.onload = function() {
+            if (xhr.status === 200) {
+                document.body.style.backgroundImage = "url({{ site.background-url }})";
+            } else {
+                console.error("background Error!");
+            }
+        };
+        xhr.send();
+    };
+    </script>
     {% include head/style.html %}
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.12.4.min.js"></script>
     <title>{% if page.title %}{{ page.title | escape }} - {{ site.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
     <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
-    <link rel="shortcut icon" href="https://zichenstudio.github.io/blog/favicon.ico" type="image/x-icon">
     {% if page.mathjax %}{% include head/mathjax.html %}{% endif %}
 </head>
