--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,10 +3,13 @@ layout: default
 ---
 <div class="home">
 <span class="post-counter" >{{ site.posts | size }} Posts</span>
+<div class="search">
+    Search: <input type="text" oninput="onInputValue(value)">
+</div>
 <ul>
     {% for post in site.posts %}
     <li>
-        <a href="{% include relative %}{{ post.url | relative_url }}">{{ post.title | escape }}</a>
+        <a href="{% include relative %}{{ post.url | relative_url }}" class="articleTitle">{{ post.title | escape }}</a>
         <p class="post-info" style="color:rgb(51,51,51);">
             <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%b %-d, %Y" }}</time>
             {% for tag in post.tags %}
@@ -16,4 +19,13 @@ layout: default
     </li>
     {% endfor %}
 </ul>
+<script>
+    function onInputValue(value) {
+        const articleTitles = document.getElementsByClassName("articleTitle");
+        Array.from(articleTitles).forEach(articleTitle => {
+            const articleParentNode = articleTitle.parentNode;
+            articleParentNode.style.display = articleTitle.innerText.includes(value) ? 'list-item' : 'none';
+        });
+    }
+</script>
 </div>
