--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,6 @@
         {% capture footer-md %}{% include footer.md %}{% endcapture %}{{ footer-md | markdownify }}
       </footer>
     </div>
-    <script src="https://cdn.jsdelivr.net/gh/zichenstudio/welcometitle.js/dist/welcometitle.min.js" async></script>
+    <script src="https://fastly.jsdelivr.net/gh/zichenstudio/welcometitle.js/dist/welcometitle.min.js" async></script>
   </body>
 </html>
